# file-sharing

./: .gitignore  Cargo.toml  subir
locales/en-US/: main.ftl
src/: app.rs  hasher.rs  lib.rs  main.rs
src/app_state/: app_config.rs  app_data.rs  link_config.rs  mod.rs  sessions.rs
src/app_state/link/: link_config.rs  mod.rs
src/extractors/: admin_auth_extractor.rs  app_translator_extractor.rs  mod.rs  user_auth_extractor.rs
src/localization/: app_translator.rs  arg_map.rs  mod.rs
src/routes/: admin_login.rs  mod.rs  protected.rs  upload.rs
src/routes/admin/: dashboard.rs  login.rs  mod.rs
src/routes/user/: download.rs  login.rs  mod.rs  upload.rs
templates/: base.html  login.html
templates/admin/: dashboard.html
templates/user/: download.html  login.html  upload.html
