[package]
name = "file-sharing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.6", features = ["macros", "multipart"]}
dotenvy = "0.15.7"
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "fmt"]}
tower-http = {version = "0.6.6", features = ["cors", "trace"] }
serde = {version = "1.0.228", features = ["derive", "rc"]}
serde_json = "1.0.145"
chrono = {version = "0.4.42", features = ["serde"]}
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = {version = "1.18.1", features = ["v4"]}
askama = "0.14.0"
axum-extra = {version = "0.12.1", features = ["cookie", "typed-header"]}
fluent-templates = "0.13.2"
fluent-bundle = "0.16.0"

